# far2l-jumpword

./: .clang-format  CMakeLists.txt  README.md
configs/plug/: JumpWordEng.lng  JumpWordRus.lng  JumpWordUkr.lng
src/: JumpWord.cpp  JumpWord.hpp  JumpWordLng.hpp
